Correct spacing in navigation for mobile mode.

--- a/src/containers/Navigation/Navigation.scss
+++ b/src/containers/Navigation/Navigation.scss
@@ -171,6 +171,7 @@
             &.open {
                 background-color: $background-color-primary;
                 height: 129px;
+                margin-bottom: -3px;
             }
         }
 
